--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
           </div>
         </div>
       </section>
+      <section class="search">
+        <h2 class="search_tittle">ابحث عن الخدمة التي تحتاجها
+        </h2>
+        <div class="search_box">
+            <i class="fas fa-search"></i>
+            <input class="search_input" type="text" name="" id="">
+            <button class="search_bt" type="submit">بحث</button>
+          
+          
+
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
